--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -43,7 +43,7 @@ backend frontend_backend
     balance roundrobin
     option httpchk GET /
     http-check expect status 200
-    server frontend1 golog-frontend-1:80 check inter 5s fall 3 rise 2
+    server frontend1 frontend:80 check inter 5s fall 3 rise 2
 
 # API Backend definitions
 backend query_api_backend
