--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -18,6 +18,9 @@ RUN npm run build
 # Production stage with nginx
 FROM nginx:alpine AS production
 
+# Install curl for health checks
+RUN apk add --no-cache curl
+
 # Copy built assets from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 
